# EigenScript

./: .flake8  .gitignore  .replit  404.html  =23.0.0  CHANGELOG.md  CLI_STATUS.md  COMPREHENSIVE_ANALYSIS_AND_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FINISHING_WORK.md  FLAKE8_ENFORCEMENT.md  KNOWN_ISSUES.md  LICENSE  MANUAL_RELEASE_STEPS.md  PHASE3_COMPLETION_STATUS.md  PLANNING_INDEX.md  PR_MERGE_STATUS.md  README.md  RELEASE.md  ROADMAP.md  ROADMAP_FUTURE.md  ROADMAP_QUICKREF.md  ROADMAP_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TEST_RESULTS.md  THEORETICAL_FOUNDATIONS.md  VISION.md  coverage.xml  index.html  pyproject.toml  replit.md  requirements.txt  sitemap.xml  test_convergence_detection.py  test_convergence_simple.py  test_duality.py  test_eigencontrol.py  test_equilibrium_unification.py  test_functions.py  (+5 more)
PHASE5_INDEX/: index.html
PHASE5_INTERACTIVE_PLAYGROUND_ROADMAP/: index.html
PHASE5_PROGRESS_TRACKER/: index.html
PHASE5_QUICK_START_GUIDE/: index.html
api/: index.html
architecture/: index.html
archive/: index.html
benchmarks/: README.md
contributing/: index.html
docs/: FEATURE_PARITY_ROADMAP.md  PHASE6_IMPLEMENTATION_GUIDE.md  ROADMAP_SUMMARY.md  getting-started.md  index.md  mathematical_foundations.md  meta_circular_evaluator.md  operator-table.md  quickstart.md  roadmap.md  specification.md  specification_v2.md
eigencontrol_algorithm/: index.html
eigenfunction_analysis/: index.html
examples/: consciousness_detection.eigs  eval.eigs  factorial.eigs  index.html  meta_eval.eigs  meta_eval_complete.eigs  self_aware_computation.eigs  self_reference.eigs  smart_iteration_showcase.eigs
geometric_trilogy_analysis/: index.html
getting-started/: index.html
higher_order_functions/: index.html
library_expansion_plan/: index.html
list_comprehensions/: index.html
logic-calculus/: index.html
mathematical_foundations/: index.html
meta_circular_evaluator/: index.html
operator-table/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
self-hosting/: index.html
self_hosting_roadmap/: index.html
specification/: index.html
specification_v2/: index.html
tests/: test_architecture_agnostic.py  test_benchmark.py  test_cli.py  test_datetime.py  test_enhanced_lists.py  test_evaluator.py  test_examples.py  test_file_io.py  test_higher_order_functions.py  test_interrogatives.py  test_json.py  test_lexer.py  test_list_comprehensions.py  test_list_mutations.py  test_lrvm.py  (+10 more)
(+96 files in other folders)
